[package]
name = "miband-heart-rate"
authors = ["Tnze"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Tnze/miband-heart-rate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
bluest = "0.6.6"
futures-lite = "2.3.0"
chrono = { version = "0.4", features = ["unstable-locales"] }
clap = { version = "4.5.31", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
